--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
-        "laravel/tinker": "^2.0"
+        "laravel/passport": "^9.3",
+        "laravel/tinker": "^2.0",
+        "laravel/ui": "^2.2",
+        "nwidart/laravel-modules": "^7.2"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
@@ -34,7 +37,8 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "app/"
+            "App\\": "app/",
+            "Modules\\": "Modules/"
         },
         "classmap": [
             "database/seeds",
